# nb_offline_convert

./: .gitignore  LICENSE.md  MANIFEST.in  README.md  setup.cfg  setup.py
nb_offline_convert/: __init__.py  offline_HTML.py  offline_HTML_Exporter.py  offline_WebPDF.py  offline_WebPDF_Exporter.py  tools.py
share/jupyter/nbconvert/templates/lab_offline/: index.html.j2
share/jupyter/nbconvert/templates/webpdf_offline/: conf.json  index.html.j2
tests/: bqplot.html  bqplot.ipynb  demo.py
