[metadata]
name = nb_offline_convert
version = 0.1.0
author = Duc Trung Le
author_email = leductrungxf@gmail.com
home_page = https://github.com/trungleduc/nb_offline_convert
description = An offline exporter for nbconvert.
long_description = file: README.md
long_description_content_type= text/markdown
license = MIT
license_file = LICENSE.md
keywords =  jupyter
            notebook
            nbconvert
classifiers = 
	Development Status :: 3 - Alpha
	Intended Audience :: End Users/Desktop
	Intended Audience :: Developers
	Intended Audience :: Science/Research
	License :: OSI Approved :: MIT License
	Natural Language :: English
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >= 3.6
install_requires = 
    nbconvert

[bdist_wheel]
universal = 0
